# estore_api

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/crud/: inventory.py  inventory_old.py  location.py  product.py
app/db/: session.py
app/db/models/: inventory.py  location.py  product.py
app/routers/: __init__.py  locations.py  products.py
app/schemas/: location.py  product.py
management/: config.py  database_utils.py
