[project]
name = "estore-api"
version = "0.1.0"
description = "A backend API for an e-commerce store built with FastAPI, SQLAlchemy, and PostgreSQL."
authors = ["Piotr Lipinski <kinetics20@gmail.com>"]
license = "Beerware"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.41",
]
